# lester-2026

./: .gitignore  Cargo.toml  README.md
api/: openapi.yaml
apps/ui/: index.html  package-lock.json  package.json
apps/ui/src/: api.ts  main.ts  styles.css
crates/browserd/: Cargo.toml
crates/browserd/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: errors.rs  lib.rs  models.rs  storage.rs  sync.rs  tagging.rs
crates/llm-worker/: Cargo.toml
crates/llm-worker/src/: main.rs
docs/: ARCHITECTURE.md  BUILD.md  LLM_WORKER.md  PACKAGING_MACOS.md  REPO_MAP.md  ROADMAP.md  RUST_CORE.md  SYNC_PROTOCOL.md  TAGGING_ENGINE.md  UI.md
packaging/macos/: README.md
scripts/: dev.sh  run-worker.sh
