[package]
name = "llm-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["serde", "v4"] }

lester-core = { path = "../core" }
